--- a/index.html
+++ b/index.html
@@ -8,25 +8,19 @@
 </head>
 <body>
   <div class="menu-container">
-    <h1>🍽 Carta del Restaurante</h1>
-    <ul class="menu-list">
-      <li>
-        <span class="item-name">Hamburguesa</span>
-        <span class="item-price" id="precio-hamburguesa"></span>
-      </li>
-      <li>
-        <span class="item-name">Pizza</span>
-        <span class="item-price" id="precio-pizza"></span>
-      </li>
-      <li>
-        <span class="item-name">Ensalada César</span>
-        <span class="item-price" id="precio-ensalada"></span>
-      </li>
-      <li>
-        <span class="item-name">Tacos</span>
-        <span class="item-price" id="precio-tacos"></span>
-      </li>
-    </ul>
+    <h1>Menu Restaurante</h1>
+
+    <h2>Entradas</h2>
+    <ul class="menu-list" id="menu-entradas"></ul>
+
+    <h2>Platos Principales</h2>
+    <ul class="menu-list" id="menu-principales"></ul>
+
+    <h2>Postres</h2>
+    <ul class="menu-list" id="menu-postres"></ul>
+
+    <h2>Bebidas</h2>
+    <ul class="menu-list" id="menu-bebidas"></ul>
   </div>
 
   <script src="precios.js"></script>
