--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <h2>Principales:</h2>
       <li>
-        <span class="item-name">Hamburguesa</span>
+        <span class="item-name">Burger</span>
         <span class="item-price" id="precio-hamburguesa"></span>
         <img src="Imagenes/Hamburguesa.png" alt="">
       </li>
@@ -96,6 +96,8 @@
         <img src="Imagenes/Cafe.png" alt="">
       </li>
     </ul>
+    <h4>Telefono: +54 123 456 7890</h4>
+    <h4>Gmail: RestauranteCheto@gmail.com</h4>
   </div>
   <script src="precios.js"></script>
   <script src="script.js"></script>
