--- a/index.html
+++ b/index.html
@@ -11,89 +11,139 @@
 </head>
 <body>
   <div class="menu-container">
-    <h1>Menu Restaurante.</h1>
+    <img src="Imagenes/Logo-Carta2.png" alt="">
     <ul class="menu-list">
+
       <h2>Entradas:</h2>
+
       <li>
-        <img src="Imagenes/PanAjo.png" alt="">
-        <span class="item-name">Pan con ajo</span>
-        <span class="item-price" id="precio-panAjo"></span>
+        <img src="Imagenes/empanada.jpg" alt="">
+        <span class="item-name">Empanada</span>
+        <span class="item-price" id="precio-empanada"></span>
       </li>
       <li>
-        <img src="Imagenes/Sopa.png" alt="">
-        <span class="item-name">Sopa del dia</span>
-        <span class="item-price" id="precio-sopa"></span>
+        <img src="Imagenes/provoleta.jpg" alt="">
+        <span class="item-name">Provoleta</span>
+        <span class="item-price" id="precio-provoleta"></span>
       </li>
       <li>
-        <img src="Imagenes/Ensalada.png" alt="">
-        <span class="item-name">Ensalada mixta</span>
+        <img src="Imagenes/choripan.jpg" alt="">
+        <span class="item-name">Choripan</span>
+        <span class="item-price" id="precio-choripan"></span>
+      </li>
+      <li>
+        <img src="Imagenes/morcilla.jpg" alt="">
+        <span class="item-name">Morcilla</span>
+        <span class="item-price" id="precio-morcilla"></span>
+      </li>
+      <li>
+        <img src="Imagenes/ensalada.jpg" alt="">
+        <span class="item-name">Ensalada criolla</span>
         <span class="item-price" id="precio-ensalada"></span>
+      </li>
+      <li>
+        <img src="Imagenes/pan.jpg" alt="">
+        <span class="item-name">Pan con chimichurri</span>
+        <span class="item-price" id="precio-pan"></span>
       </li>
 
       <h2>Principales:</h2>
+      
       <li>
-        <span class="item-name">Burger</span>
-        <span class="item-price" id="precio-hamburguesa"></span>
-        <img src="Imagenes/Hamburguesa.png" alt="">
+        <img src="Imagenes/milanesaNapolitana.jpg" alt="">
+        <span class="item-name">Milanesa napolitana</span>
+        <span class="item-price" id="precio-mNapolitana"></span>
       </li>
       <li>
-        <span class="item-name">Pizza</span>
-        <span class="item-price" id="precio-pizza"></span>
-        <img src="Imagenes/Pizza.png" alt="">
+        <img src="Imagenes/polloPapas.jpg" alt="">
+        <span class="item-name">Pollo al horno con papas</span>
+        <span class="item-price" id="precio-polloPapas"></span>
       </li>
       <li>
-        <span class="item-name">Pollo a la plancha</span>
-        <span class="item-price" id="precio-pollo"></span>
-        <img src="Imagenes/Pollo.png" alt="">
+        <img src="Imagenes/locro.jpg" alt="">
+        <span class="item-name">Locro</span>
+        <span class="item-price" id="precio-locro"></span>
       </li>
       <li>
-        <span class="item-name">Tacos</span>
-        <span class="item-price" id="precio-tacos"></span>
-        <img src="Imagenes/Tacos.png" alt="">
+        <img src="Imagenes/asado.jpg" alt="">
+        <span class="item-name">Asado</span>
+        <span class="item-price" id="precio-asado"></span>
       </li>
       <li>
-        <span class="item-name">Pasta carbonara</span>
-        <span class="item-price" id="precio-pasta"></span>
-        <img src="Imagenes/Pasta.png" alt="">
+        <img src="Imagenes/humita.jpg" alt="">
+        <span class="item-name">Humita</span>
+        <span class="item-price" id="precio-humita"></span>
       </li>
 
       <h2>Postres:</h2>
+
       <li>
-        <img src="Imagenes/Helado.png" alt="">
-        <span class="item-name">Helado</span>
+        <img src="Imagenes/flan.jpg" alt="">
+        <span class="item-name">Flan casero</span>
+        <span class="item-price" id="precio-flan"></span>
+      </li>
+      <li>
+        <img src="Imagenes/panqueques.jpg" alt="">
+        <span class="item-name">Panqueque con dulce de leche</span>
+        <span class="item-price" id="precio-panqueque"></span>
+      </li>
+      <li>
+        <img src="Imagenes/helado.jpg" alt="">
+        <span class="item-name">Helado casero</span>
         <span class="item-price" id="precio-helado"></span>
       </li>
       <li>
-        <img src="Imagenes/TartaDeQueso.png" alt="">
-        <span class="item-name">Tarta de queso</span>
-        <span class="item-price" id="precio-tartaQueso"></span>
+        <img src="Imagenes/pastelitos.jpg" alt="">
+        <span class="item-name">Pastelitos</span>
+        <span class="item-price" id="precio-pastelitos"></span>
       </li>
       <li>
-        <img src="Imagenes/Flan.png" alt="">
-        <span class="item-name">flan casero</span>
-        <span class="item-price" id="precio-flan"></span>
+        <img src="Imagenes/chocotorta.jpg" alt="">
+        <span class="item-name">Chocotorta</span>
+        <span class="item-price" id="precio-chocotorta"></span>
       </li>
 
       <h2>Bebidas:</h2>
+      
       <li>
-        <span class="item-name">Agua</span>
+        <img src="Imagenes/vino.jpg" alt="">
+        <span class="item-name">Vino tinto</span>
+        <span class="item-price" id="precio-vino"></span>
+      </li>
+      <li>
+        <img src="Imagenes/cerveza.jpg" alt="">
+        <span class="item-name">Cerveza</span>
+        <span class="item-price" id="precio-cerveza"></span>
+      </li>
+      <li>
+        <img src="Imagenes/fernet.jpg" alt="">
+        <span class="item-name">Fernet con coca</span>
+        <span class="item-price" id="precio-fernet"></span>
+      </li>
+      <li>
+        <img src="Imagenes/cocacola.jpg" alt="">
+        <span class="item-name">coca-cola</span>
+        <span class="item-price" id="precio-refresco_CocaCola"></span>
+      </li>
+      <li>
+        <img src="Imagenes/sprite.jpg" alt="">
+        <span class="item-name">sprite</span>
+        <span class="item-price" id="precio-refresco_sprite"></span>
+      </li>
+      <li>
+        <img src="Imagenes/agua.jpg" alt="">
+        <span class="item-name">Agua mineral</span>
         <span class="item-price" id="precio-agua"></span>
-        <img src="Imagenes/Agua.png" alt="">
       </li>
       <li>
-        <span class="item-name">Zumo natural</span>
+        <img src="Imagenes/jugo.jpg" alt="">
+        <span class="item-name">Jugo naural</span>
         <span class="item-price" id="precio-zumo"></span>
-        <img src="Imagenes/JugoNaranja.png" alt="">
       </li>
       <li>
-        <span class="item-name">Refresco</span>
-        <span class="item-price" id="precio-refresco"></span>
-        <img src="Imagenes/Refresco.png" alt="">
-      </li>
-      <li>
+        <img src="Imagenes/cafe.jpg" alt="">
         <span class="item-name">Cafe</span>
         <span class="item-price" id="precio-cafe"></span>
-        <img src="Imagenes/Cafe.png" alt="">
       </li>
     </ul>
     <h4>Telefono: +54 123 456 7890</h4>
