--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="menu-container">
-    <img src="Imagenes/Logo-Carta2.png" alt="">
+    <img src="Imagenes/Logo-Carta2.png" alt="" class="mainLogo">
     <ul class="menu-list">
 
       <h2>Entradas:</h2>
